--- a/index.html
+++ b/index.html
@@ -348,14 +348,7 @@
              <div class="content">
                <div class="publication-video">
                <!-- Youtube embed code here -->
-               <iframe width="560" height="315" src="https://www.youtube.com/embed/-HTr_-DLqCg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-             </div>
-            </div>
-		   
-	    <div class="content">
-               <div class="publication-video">
-               <!-- Youtube embed code here -->
-               <iframe width="560" height="315" src="https://www.youtube.com/embed/ntPdgn47sKw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+               <iframe width="560" height="315" src="https://www.youtube.com/embed/WKRkm3Tfn3s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
              </div>
             </div>
 	
